--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.13"
+    "sequelize": "^5.21.13",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
